refactor api find events
